welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:32: error: ';' expected but ')' found.
			)
                        ^